--- a/w01/d02/m4-CSS-lab/starter-code/css/main.css
+++ b/w01/d02/m4-CSS-lab/starter-code/css/main.css
@@ -8,3 +8,27 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+
+h1 {
+	font: courier;
+}
+span {
+	font-style: strong;
+}
+
+button {
+	margin: 10px;
+	background-color: grey;
+	border-radius: 10px;
+}
+
+
+
+li {
+	display: inline;
+	list-style-type: none;
+	padding-right: 20px;
+	text-align: center;
+}
