--- a/w07/d03/m1-express-views-lesson/solution-code/app/views/layout.ejs
+++ b/w07/d03/m1-express-views-lesson/solution-code/app/views/layout.ejs
@@ -23,5 +23,5 @@
     <div class="container">
         <% include ./partials/candy/form %>
     </div>
-</body>
-</html>
+
+<% include ./partials/footer %>
