fixes last bug, good to go

--- a/w08/d02/m2-oauth-lab/solution-code/app/views/layout.hbs
+++ b/w08/d02/m2-oauth-lab/solution-code/app/views/layout.hbs
@@ -7,7 +7,7 @@
   <h1>LOGIN USING PASSPORT</h1>
   <div>
       {{#if user }}
-        <h2> Below is the data sent by facebook</h2>
+        <h2> Below is the data sent by your OAuth provider:</h2>
         <pre>
           {{user.fb}}
           {{user.gh}}
